--- a/agenda.adoc
+++ b/agenda.adoc
@@ -12,7 +12,10 @@ Rough agenda for the next 40 or so minutes:
 
 * I'll talk about the concept of future-proof packages
 * what prevents packages from being future-proof
-* and lastly how to fix it
+* and lastly how to future-proof packages:
+** this section will discuss basic patterns we can use
+** and then specifically how to find and fix problems
+   that stop a package from being future-proof
 
 Okay, let's get into it.
 --
